src/parser/generated/.antlr/hoaParser.java
// Generated from /home/daniel/Desktop/bakalarka/hoaeditor/src/parser/generated/hoa.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class hoaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, BODYDELIM=21, ENDDELIM=22, HEADERNAME=23, 
		STRING=24, INT=25, WHITESPACE=26, BOOLEAN=27, IDENTIFIER=28, ANAME=29, 
		COMMENT=30;
	public static final int
		RULE_automaton = 0, RULE_header = 1, RULE_formatVersion = 2, RULE_headerItem = 3, 
		RULE_states = 4, RULE_start = 5, RULE_stateConj = 6, RULE_ap = 7, RULE_alias = 8, 
		RULE_acceptance = 9, RULE_accname = 10, RULE_accstr = 11, RULE_tool = 12, 
		RULE_toolstr = 13, RULE_name = 14, RULE_props = 15, RULE_propval = 16, 
		RULE_etc = 17, RULE_lexpr = 18, RULE_lexpr2 = 19, RULE_acceptanceCond = 20, 
		RULE_acceptanceCond2 = 21, RULE_body = 22, RULE_vertex = 23, RULE_stateName = 24, 
		RULE_accSig = 25, RULE_edge = 26, RULE_label = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"automaton", "header", "formatVersion", "headerItem", "states", "start", 
			"stateConj", "ap", "alias", "acceptance", "accname", "accstr", "tool", 
			"toolstr", "name", "props", "propval", "etc", "lexpr", "lexpr2", "acceptanceCond", 
			"acceptanceCond2", "body", "vertex", "stateName", "accSig", "edge", "label"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'HOA:'", "'States:'", "'Start:'", "'&'", "'AP:'", "'Alias:'", 
			"'Acceptance:'", "'acc-name:'", "'tool:'", "'name:'", "'properties:'", 
			"'!'", "'('", "')'", "'|'", "'State:'", "'{'", "'}'", "'['", "']'", "'--BODY--'", 
			"'--END--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "BODYDELIM", "ENDDELIM", 
			"HEADERNAME", "STRING", "INT", "WHITESPACE", "BOOLEAN", "IDENTIFIER", 
			"ANAME", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "hoa.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public hoaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AutomatonContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public TerminalNode BODYDELIM() { return getToken(hoaParser.BODYDELIM, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode ENDDELIM() { return getToken(hoaParser.ENDDELIM, 0); }
		public AutomatonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_automaton; }
	}

	public final AutomatonContext automaton() throws RecognitionException {
		AutomatonContext _localctx = new AutomatonContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_automaton);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			header();
			setState(57);
			match(BODYDELIM);
			setState(58);
			body();
			setState(59);
			match(ENDDELIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public FormatVersionContext formatVersion() {
			return getRuleContext(FormatVersionContext.class,0);
		}
		public List<HeaderItemContext> headerItem() {
			return getRuleContexts(HeaderItemContext.class);
		}
		public HeaderItemContext headerItem(int i) {
			return getRuleContext(HeaderItemContext.class,i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			formatVersion();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << HEADERNAME))) != 0)) {
				{
				{
				setState(62);
				headerItem();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormatVersionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(hoaParser.IDENTIFIER, 0); }
		public FormatVersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formatVersion; }
	}

	public final FormatVersionContext formatVersion() throws RecognitionException {
		FormatVersionContext _localctx = new FormatVersionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_formatVersion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__0);
			setState(69);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderItemContext extends ParserRuleContext {
		public StatesContext states() {
			return getRuleContext(StatesContext.class,0);
		}
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public ApContext ap() {
			return getRuleContext(ApContext.class,0);
		}
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public AcceptanceContext acceptance() {
			return getRuleContext(AcceptanceContext.class,0);
		}
		public AccnameContext accname() {
			return getRuleContext(AccnameContext.class,0);
		}
		public ToolContext tool() {
			return getRuleContext(ToolContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public PropsContext props() {
			return getRuleContext(PropsContext.class,0);
		}
		public EtcContext etc() {
			return getRuleContext(EtcContext.class,0);
		}
		public HeaderItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headerItem; }
	}

	public final HeaderItemContext headerItem() throws RecognitionException {
		HeaderItemContext _localctx = new HeaderItemContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_headerItem);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				states();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				start();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				ap();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				alias();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(75);
				acceptance();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 6);
				{
				setState(76);
				accname();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 7);
				{
				setState(77);
				tool();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 8);
				{
				setState(78);
				name();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 9);
				{
				setState(79);
				props();
				}
				break;
			case HEADERNAME:
				enterOuterAlt(_localctx, 10);
				{
				setState(80);
				etc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatesContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(hoaParser.INT, 0); }
		public StatesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_states; }
	}

	public final StatesContext states() throws RecognitionException {
		StatesContext _localctx = new StatesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_states);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__1);
			setState(84);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public StateConjContext stateConj() {
			return getRuleContext(StateConjContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__2);
			setState(87);
			stateConj();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateConjContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(hoaParser.INT, 0); }
		public StateConjContext stateConj() {
			return getRuleContext(StateConjContext.class,0);
		}
		public StateConjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateConj; }
	}

	public final StateConjContext stateConj() throws RecognitionException {
		StateConjContext _localctx = new StateConjContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stateConj);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(INT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(INT);
				setState(91);
				match(T__3);
				setState(92);
				stateConj();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ApContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(hoaParser.INT, 0); }
		public List<TerminalNode> STRING() { return getTokens(hoaParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(hoaParser.STRING, i);
		}
		public ApContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ap; }
	}

	public final ApContext ap() throws RecognitionException {
		ApContext _localctx = new ApContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ap);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__4);
			setState(96);
			match(INT);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRING) {
				{
				{
				setState(97);
				match(STRING);
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasContext extends ParserRuleContext {
		public TerminalNode ANAME() { return getToken(hoaParser.ANAME, 0); }
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public AliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias; }
	}

	public final AliasContext alias() throws RecognitionException {
		AliasContext _localctx = new AliasContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_alias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__5);
			setState(104);
			match(ANAME);
			setState(105);
			lexpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AcceptanceContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(hoaParser.INT, 0); }
		public AcceptanceCondContext acceptanceCond() {
			return getRuleContext(AcceptanceCondContext.class,0);
		}
		public AcceptanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acceptance; }
	}

	public final AcceptanceContext acceptance() throws RecognitionException {
		AcceptanceContext _localctx = new AcceptanceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_acceptance);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__6);
			setState(108);
			match(INT);
			setState(109);
			acceptanceCond();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AccnameContext extends ParserRuleContext {
		public AccstrContext accstr() {
			return getRuleContext(AccstrContext.class,0);
		}
		public AccnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accname; }
	}

	public final AccnameContext accname() throws RecognitionException {
		AccnameContext _localctx = new AccnameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_accname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__7);
			setState(112);
			accstr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AccstrContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(hoaParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(hoaParser.IDENTIFIER, i);
		}
		public List<TerminalNode> BOOLEAN() { return getTokens(hoaParser.BOOLEAN); }
		public TerminalNode BOOLEAN(int i) {
			return getToken(hoaParser.BOOLEAN, i);
		}
		public List<TerminalNode> INT() { return getTokens(hoaParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(hoaParser.INT, i);
		}
		public AccstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accstr; }
	}

	public final AccstrContext accstr() throws RecognitionException {
		AccstrContext _localctx = new AccstrContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_accstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(IDENTIFIER);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(115);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << IDENTIFIER))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToolContext extends ParserRuleContext {
		public ToolstrContext toolstr() {
			return getRuleContext(ToolstrContext.class,0);
		}
		public ToolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tool; }
	}

	public final ToolContext tool() throws RecognitionException {
		ToolContext _localctx = new ToolContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_tool);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__8);
			setState(122);
			toolstr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToolstrContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(hoaParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(hoaParser.STRING, i);
		}
		public ToolstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toolstr; }
	}

	public final ToolstrContext toolstr() throws RecognitionException {
		ToolstrContext _localctx = new ToolstrContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_toolstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(STRING);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(125);
				match(STRING);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(hoaParser.STRING, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__9);
			setState(129);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropsContext extends ParserRuleContext {
		public PropvalContext propval() {
			return getRuleContext(PropvalContext.class,0);
		}
		public PropsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_props; }
	}

	public final PropsContext props() throws RecognitionException {
		PropsContext _localctx = new PropsContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_props);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__10);
			setState(132);
			propval();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropvalContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(hoaParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(hoaParser.IDENTIFIER, i);
		}
		public PropvalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propval; }
	}

	public final PropvalContext propval() throws RecognitionException {
		PropvalContext _localctx = new PropvalContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_propval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(134);
				match(IDENTIFIER);
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EtcContext extends ParserRuleContext {
		public TerminalNode HEADERNAME() { return getToken(hoaParser.HEADERNAME, 0); }
		public List<TerminalNode> BOOLEAN() { return getTokens(hoaParser.BOOLEAN); }
		public TerminalNode BOOLEAN(int i) {
			return getToken(hoaParser.BOOLEAN, i);
		}
		public List<TerminalNode> INT() { return getTokens(hoaParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(hoaParser.INT, i);
		}
		public List<TerminalNode> STRING() { return getTokens(hoaParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(hoaParser.STRING, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(hoaParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(hoaParser.IDENTIFIER, i);
		}
		public EtcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etc; }
	}

	public final EtcContext etc() throws RecognitionException {
		EtcContext _localctx = new EtcContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_etc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(HEADERNAME);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << INT) | (1L << BOOLEAN) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(141);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << INT) | (1L << BOOLEAN) | (1L << IDENTIFIER))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexprContext extends ParserRuleContext {
		public TerminalNode BOOLEAN() { return getToken(hoaParser.BOOLEAN, 0); }
		public Lexpr2Context lexpr2() {
			return getRuleContext(Lexpr2Context.class,0);
		}
		public TerminalNode INT() { return getToken(hoaParser.INT, 0); }
		public TerminalNode ANAME() { return getToken(hoaParser.ANAME, 0); }
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public LexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexpr; }
	}

	public final LexprContext lexpr() throws RecognitionException {
		LexprContext _localctx = new LexprContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_lexpr);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(BOOLEAN);
				setState(148);
				lexpr2();
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				match(INT);
				setState(150);
				lexpr2();
				}
				break;
			case ANAME:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				match(ANAME);
				setState(152);
				lexpr2();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(153);
				match(T__11);
				setState(154);
				lexpr();
				setState(155);
				lexpr2();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 5);
				{
				setState(157);
				match(T__12);
				setState(158);
				lexpr();
				setState(159);
				match(T__13);
				setState(160);
				lexpr2();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lexpr2Context extends ParserRuleContext {
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public Lexpr2Context lexpr2() {
			return getRuleContext(Lexpr2Context.class,0);
		}
		public Lexpr2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexpr2; }
	}

	public final Lexpr2Context lexpr2() throws RecognitionException {
		Lexpr2Context _localctx = new Lexpr2Context(_ctx, getState());
		enterRule(_localctx, 38, RULE_lexpr2);
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				match(T__3);
				setState(165);
				lexpr();
				setState(166);
				lexpr2();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				match(T__14);
				setState(169);
				lexpr();
				setState(170);
				lexpr2();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AcceptanceCondContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(hoaParser.IDENTIFIER, 0); }
		public TerminalNode INT() { return getToken(hoaParser.INT, 0); }
		public AcceptanceCond2Context acceptanceCond2() {
			return getRuleContext(AcceptanceCond2Context.class,0);
		}
		public AcceptanceCondContext acceptanceCond() {
			return getRuleContext(AcceptanceCondContext.class,0);
		}
		public TerminalNode BOOLEAN() { return getToken(hoaParser.BOOLEAN, 0); }
		public AcceptanceCondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acceptanceCond; }
	}

	public final AcceptanceCondContext acceptanceCond() throws RecognitionException {
		AcceptanceCondContext _localctx = new AcceptanceCondContext(_ctx, getState());
		enterRule(_localctx, 40, RULE_acceptanceCond);
		int _la;
		try {
			setState(190);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				match(IDENTIFIER);
				setState(176);
				match(T__12);
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__11) {
					{
					setState(177);
					match(T__11);
					}
				}
